Add request and search methods

--- a/src/components/PokeBox/PokeBox.scss
+++ b/src/components/PokeBox/PokeBox.scss
@@ -5,8 +5,6 @@
   @extend %fb--collumn;
   @extend %fb--center-center;
   width: 100%;
-  border: $border;
-  border-radius: 5px;
   margin-top: 30px;
   padding: 15px 15px;
 
@@ -14,5 +12,6 @@
     @extend %fb--row-wrap;
     @extend %fb--start-start;
     width: 100%;
+    max-width: 1120px;
   }
 }
