--- a/src/style/global/variables.scss
+++ b/src/style/global/variables.scss
@@ -17,4 +17,4 @@ $border-color: #d7d7d7;
 $border: 1px solid $border-color;
 
 // Box-shadow pattern
-$box-shadow: 0px 1px 4px 0px #0000001a;
+$box-shadow: 0px 2px 4px 0px rgb(0 0 0 / 10%);
