Add PokeLoad component

--- a/src/style/global/variables.scss
+++ b/src/style/global/variables.scss
@@ -13,6 +13,12 @@ $txt-alt: #cacaca;
 // Border color
 $border-color: #d7d7d7;
 
+// Background track color
+$bg-track: #d7d7d7;
+
+// Background thumb color
+$thumb: #bdb5b5;
+
 // Border pattern
 $border: 1px solid $border-color;
 
