--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -30,10 +30,10 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: $border-color;
+  background-color: $bg-track;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: $txt;
+  background-color: $thumb;
   border-radius: 3px;
 }
