--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,22 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: 'Oswald';
+  font-style: normal;
+  src: url(./assets/fonts/Oswald/Oswald-VariableFont_wght.ttf);
+	font-weight: 125 950;
+  font-stretch: 75% 125%;
+}
+
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  src: url(./assets/fonts/Rubik/Rubik-VariableFont_wght.ttf);
+	font-weight: 125 950;
+  font-stretch: 75% 125%;
+}
+
 html,
 body,
 div,
