feat: add pokemon generation filtering

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,8 @@
 :root {
   --plastic-color-1: #dc0a2d;
   --plastic-color-2: #990921;
+  --plastic-color-3: #272930;
+  --plastic-color-4: #4a4c52;
 
   --glass-color-1: #27abfc;
 
